--- a/projeto.html
+++ b/projeto.html
@@ -38,6 +38,7 @@
 
         </section>
         <section id="container">
+            <img src="svg/seta.svg" alt="icone-voltar" id="seta">
             <article id="conteudo">
                 <div>
                     <p class="text">Mustang</p>
